# wpm

./: .gitignore  .pre-commit-config.yaml  .projections.json  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: pre-commit.yml  rust.yml  windows.yml
src/: animation.rs  app.rs  colours.rs  config.rs  fonts.rs  gfx_window.rs  input.rs  label.rs  layout.rs  lib.rs  main.rs  maths.rs  quad.rs  rect.rs  screen.rs  screens.rs  storage.rs  typing_result.rs  typing_state.rs  typing_test.rs  ui_state.rs  words.rs
src/screens/: menu.rs  results_list_screen.rs  results_screen.rs  test_screen.rs
src/shaders/: quad_150_core.vert
src/storage/: storage_error.rs  storage_v1.rs  storage_v2.rs  storage_v3.rs
src/words/: top-200.csv  top_200.rs
tests/: typing_test_tests.rs
