[package]
name = "wpm"
version = "0.1.0"
authors = ["William Roe <git@wjlr.org.uk>"]
edition = "2018"
license = "MIT"

[dependencies]
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_gl = "0.6"
gfx_window_glutin = "0.31"
glutin = { version = "0.21", features = ["serde", "icon_loading"] }
cgmath = "0.17.0"
gfx_glyph = "0.15"
rmp = "0.8"
dirs = "1"
num-traits = "0.2"
num-derive = "0.2"
chrono = "0.4"
rand = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = [
  "winbase",
  "consoleapi",
  "shellapi",
  "processenv",
  "synchapi"
] }
