[package]
name = "wpm"
description = "Typing test tool"
version = "0.1.0"
authors = ["William Roe <git@wjlr.org.uk>"]
edition = "2018"
resolver = "2"
license = "MIT"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
glyphon = "0.7.0"
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
cgmath = "0.18"
rmp = "0.8"
dirs = "5"
num-traits = "0.2"
num-derive = "0.4"
chrono = "0.4"
rand = "0.8"
clap = "4.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = [
  "winbase",
  "consoleapi",
  "shellapi",
  "processenv",
  "synchapi"
] }

[package.metadata.bundle]
name = "WPM"
identifier = "me.willroe.apps.wpm"
version = "0.1.0"
